--- a/src/assets/App.module.css
+++ b/src/assets/App.module.css
@@ -1,4 +1,7 @@
 .logo {
-  display: block;
-  margin: 0 auto 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #34495e;
+  margin: 0;
 }
