--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,9 +1,14 @@
 h1 {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  font-size: medium;
+  background-color: #41b883 ;
+  text-align: center;
 }
 
 h2 {
   font-size: small;
+  color: #41b883;
 }
 
 header {
@@ -15,7 +20,7 @@ nav {
   width: 100%;
   font-size: 12px;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 0.5rem;
 }
 
 nav a.router-link-exact-active {
@@ -37,16 +42,6 @@ nav a:first-of-type {
 }
 
 @media (min-width: 1024px) {
-  header {
-    display: flex;
-    place-items: center;
-    padding-right: calc(var(--section-gap) / 2);
-  }
-
-  .logo {
-    margin: 0 2rem 0 0;
-  }
-
   header .wrapper {
     display: flex;
     place-items: flex-start;
@@ -55,7 +50,7 @@ nav a:first-of-type {
 
   nav {
     text-align: left;
-    margin-left: -1rem;
+    margin-left: 0.5rem;
     font-size: 1rem;
 
     padding: 1rem 0;
