--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -8,7 +8,8 @@ h1 {
 
 h2 {
   font-size: small;
-  color: #41b883;
+  color: #34495e;
+  padding: 0.5rem;
 }
 
 header {
@@ -18,7 +19,7 @@ header {
 
 nav {
   width: 100%;
-  font-size: 12px;
+  font-size: small;
   text-align: center;
   margin-top: 0.5rem;
 }
@@ -52,7 +53,6 @@ nav a:first-of-type {
     text-align: left;
     margin-left: 0.5rem;
     font-size: 1rem;
-
     padding: 1rem 0;
     margin-top: 1rem;
   }
