--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -52,7 +52,7 @@ nav a:first-of-type {
   nav {
     text-align: left;
     margin-left: 0.5rem;
-    font-size: 1rem;
+    font-size: medium;
     padding: 1rem 0;
     margin-top: 1rem;
   }
