--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -22,6 +22,7 @@ nav {
   font-size: small;
   text-align: center;
   margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 nav a.router-link-exact-active {
